--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ site.repository | append: '@master' %} {% endif %}
               {% if site.organization %}
               <span class="meta-info">
                 <span class="octicon octicon-organization"></span>
-                <a href="{{ site.organization_url }}" target="_blank"
+                <!-- <a href="{{ site.organization_url }}" target="_blank"
                   >{{ site.organization }}</a
-                >
+                > -->
               </span>
               {% endif %}
               <span class="meta-info">
