--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@ site.repository | append: '@master' %} {% endif %}
             </h1>
             <div class="collection-info">
               <span class="meta-info mobile-hidden">
-                <span class="octicon octicon-location"></span>
-                {{ site.location }}
+                <!-- <span class="octicon octicon-location"></span>
+                {{ site.location }} -->
               </span>
               {% if site.organization %}
               <span class="meta-info">
                 <span class="octicon octicon-organization"></span>
-                <!-- <a href="{{ site.organization_url }}" target="_blank"
+                <a href="{{ site.organization_url }}" target="_blank"
                   >{{ site.organization }}</a
-                > -->
+                >
               </span>
               {% endif %}
               <span class="meta-info">
